# llm_recorder

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
examples/: anthropic_basic.py  basic.py  chained_calls.py  direct_recorder.py  google_basic.py  openai_basic.py
examples/saves/: 1.request.json  1.response.json
examples/saves/anthropic/: 1.request_messages.json  1.response_content.json  1.response_id.json  1.response_stop_reason.json  1.response_usage.json  2.response.json  2.response_content.json  2.response_id.json  2.response_model.json  2.response_role.json  2.response_usage.json  3.request.json  3.response.json
examples/saves/basic/: 1.request_messages.json  1.request_model.json  1.response_choices.json  1.response_created.json  1.response_id.json  1.response_model.json  1.response_system_fingerprint.json  1.response_usage.json
examples/saves/chained_calls/: 1.request_messages.json  1.response.json  1.response_choices.json  1.response_created.json  1.response_id.json  1.response_model.json  1.response_object.json  1.response_usage.json  2.request.json  2.response.json
examples/saves/direct/: 1.request.json  (+18 more)
examples/saves_anthropic/: 1.request.json  1.response.json  2.request.json
examples/saves_openai/: 1.response.json  2.response.json
llm_recorder/: __init__.py  litellm_replay.py  llm_proxy.py  llm_recorder.py  openai_replay.py  test_litellm.py  test_llm_recorder.py
llm_recorder/providers/: anthropic_recorder.py  google_recorder.py  http_recorder.py  litellm_recorder.py  openai_recorder.py  test_litellm.py
(+26 files in other folders)
